crates/aven-check/tests/fixtures/check/invalid/named-family-instance-slot.av
Ticket = {
  severity: Int,
  sharedPriority(): Int => .severity,
  <(other: Ticket): Bool
}
